[SmartCommit] SP-313 #comment 레파지토리 개편 #close #time 1h +review SR @dongmin.lee
[ Java Service Tree Framework(JSTF)::Backend-System ]
[Document] http://www.313.co.kr/confluence
[IssueTracker] http://www.313.co.kr/jira
[VersionControl] https://github.com/313devgrp
[CodeReview] http://www.313.co.kr/fecru
[CI-Build] http://www.313.co.kr/bamboo
[BuildManager] http://www.313.co.kr/spinnaker
[CD-Deploy] http://www.313.co.kr/jenkins
[ArtifactManager] http://www.313.co.kr/nexus
[CodeAnalysis] http://www.313.co.kr/sonar
[Docker] https://hub.docker.com/u/313devgrp

--- a/system/docker/yml/allinone.yml
+++ b/system/docker/yml/allinone.yml
@@ -482,7 +482,7 @@ services:
     logging: *allinone-logging
 
   fluentd:
-    image: 313devgrp/fluentd:v1.14.0-debian-1.0-v4
+    image: 313devgrp/fluentd-elastic-kafka:v1.9.1-debian-1.0.1
     ports:
       - 24224:24224
       - 24224:24224/udp
