--- a/system/docker/yml/devtool.yml
+++ b/system/docker/yml/devtool.yml
@@ -126,7 +126,14 @@ services:
     deploy: *devtool-deploy
     networks: *devtool-network
     extra_hosts: *devtool-addhost
-    logging: *devtool-logging
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: 192.168.25.46:24224
+        fluentd-async-connect: "true"
+        fluentd-retry-wait: "1s"
+        fluentd-max-retries: "30"
+        tag: jrebel
 
 volumes:
 
